# cpPSI

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
report/: Report_Caliandro_Pierciro_0299815.aux  Report_Caliandro_Pierciro_0299815.run.xml  Report_Caliandro_Pierciro_0299815.tex  Report_Caliandro_Pierciro_0299815.toc
src/: dataset_gen.py
src/dataset/: receiver.csv  sender.csv
src/lib/: receiver.cpp  receiver.h  sender.cpp  sender.h  utils.cpp  utils.h
src/main/: main.cpp  params.json
src/output/: intersection.txt
src/receiver/: receiver.cpp  receiver.h
src/sender/: sender.cpp  sender.h
src/test/: dataset_gen.cpp  dataset_gen.h  result.csv  test.cpp
src/utils/: utils.cpp  utils.h
